<resources>
    <string name="app_name">Contacts</string>
    <string name="txtLogin">Login</string>
    <string name="txtPassword">Password</string>
    <string name="txtRepeatPassword">Repeat password</string>
    <string name="txtRegistrationComplite">Registration was complited!</string>
    <string name="btnLogin">Sing In</string>
    <string name="btnRegister">Register</string>
    <string name="btnCancel">Cancel</string>
    <string name="login">oksana</string>
    <string name="password">kovtsun</string>
    <string name="inputData">"Please, fill in all fields!"</string>
    <string name="inputData1">"Please, fill in the field!"</string>
    <string name="invalidData">"Invalid login or password!"</string>
    <string name="passwordsDoNotMatch">"Passwords do not match!"</string>
    <string name="welcome">"Welcome!"</string>
    <string name="txtAddNewContact">"Please, enter data of contact!"</string>
    <string name="txtEditContact">"Please, enter the new data of contact!"</string>
    <string name="btnAdd">"Add"</string>
    <string name="btnEdit">"Edit"</string>
    <string name="newContactAdd">"New contact was added!"</string>
    <string name="editContactError">"Please, choose one element!"</string>
    <string name="editContact">"Contact was changed!"</string>
    <string name="zeroSelect">"0 item selected"</string>
    <string name="moreSelect">" items selected"</string>
    <string name="logOut">"Log out was complited"</string>
    <string name="noConnection">"No connection"</string>
    <string name="logOutBtn">"Log out"</string>
    <string name="facebook_app_id">726335154194590</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="search_btn">Search</string>
    <string name="call_btn_context">Call...</string>
    <string name="edit_btn_context">Edit contact</string>
    <string name="delete_btn_context">Delete contact</string>
    <string name="options_context">Select Action</string>
    <string name="delete_btn">Delete</string>
    <string name="txt_delete">Delete a contact?</string>
    <string name="txt_delete_was_complite">Delete contact was complited!</string>
    <string name="google_maps_key">AIzaSyD84yVf9Ggr3eiaGua0wiF1vPwvN_zvjNA</string>
    <string name="newMarkerAdd">"New marker was added!"</string>
    <string name="deleteMarker">Delete marker was complited!</string>
    <string name="editMarker">Edit marker was complited!</string>
    <string name="nullMarker">Please, choose marker!</string>
    <string name="nullSearch">Please, enter the name!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
